@@ -4,6 +4,7 @@ import com.cashwu.javatacocloud.model.Ingredient;
 import com.cashwu.javatacocloud.model.Ingredient.Type;
 import com.cashwu.javatacocloud.model.Taco;
 import com.cashwu.javatacocloud.model.TacoOrder;
+import com.cashwu.javatacocloud.repository.IngredientRepository;
 import jakarta.validation.Valid;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Controller;
@@ -11,9 +12,8 @@ import org.springframework.ui.Model;
 import org.springframework.validation.Errors;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.Arrays;
-import java.util.List;
 import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
 
 /**
  * @author cash.wu
@@ -25,18 +25,27 @@ import java.util.stream.Collectors;
 @SessionAttributes("tacoOrder")
 public class DesignTacoController {
 
+    private final IngredientRepository ingredientRepository;
+
+    public DesignTacoController(IngredientRepository ingredientRepository) {
+        this.ingredientRepository = ingredientRepository;
+    }
+
     @ModelAttribute
     public void addIngredientsToModel(Model model) {
-        List<Ingredient> ingredients = Arrays.asList(new Ingredient("FLTO", "Flour Tortilla", Type.WRAP),
-                                                     new Ingredient("COTO", "Corn Tortilla", Type.WRAP),
-                                                     new Ingredient("GRBF", "Ground Beef", Type.PROTEIN),
-                                                     new Ingredient("CARN", "Carnitas", Type.PROTEIN),
-                                                     new Ingredient("TMTO", "Diced Tomatoes", Type.VEGGIES),
-                                                     new Ingredient("LETC", "Lettuce", Type.VEGGIES),
-                                                     new Ingredient("CHED", "Cheddar", Type.CHEESE),
-                                                     new Ingredient("JACK", "Monterrey Jack", Type.CHEESE),
-                                                     new Ingredient("SLSA", "Salsa", Type.SAUCE),
-                                                     new Ingredient("SRCR", "Sour Cream", Type.SAUCE));
+
+        Iterable<Ingredient> ingredients = ingredientRepository.findAll();
+
+        //        List<Ingredient> ingredients = Arrays.asList(new Ingredient("FLTO", "Flour Tortilla", Type.WRAP),
+        //                                                     new Ingredient("COTO", "Corn Tortilla", Type.WRAP),
+        //                                                     new Ingredient("GRBF", "Ground Beef", Type.PROTEIN),
+        //                                                     new Ingredient("CARN", "Carnitas", Type.PROTEIN),
+        //                                                     new Ingredient("TMTO", "Diced Tomatoes", Type.VEGGIES),
+        //                                                     new Ingredient("LETC", "Lettuce", Type.VEGGIES),
+        //                                                     new Ingredient("CHED", "Cheddar", Type.CHEESE),
+        //                                                     new Ingredient("JACK", "Monterrey Jack", Type.CHEESE),
+        //                                                     new Ingredient("SLSA", "Salsa", Type.SAUCE),
+        //                                                     new Ingredient("SRCR", "Sour Cream", Type.SAUCE));
 
         Type[] types = Ingredient.Type.values();
         for (Type type : types) {
@@ -84,12 +93,20 @@ public class DesignTacoController {
         return "redirect:/orders/current";
     }
 
-    private Iterable<Ingredient> filterByType(List<Ingredient> ingredients,
+    private Iterable<Ingredient> filterByType(Iterable<Ingredient> ingredients,
                                               Type type) {
-        return ingredients.stream()
-                          .filter(x -> x.getType()
-                                        .equals(type))
-                          .collect(Collectors.toList());
+
+        return StreamSupport.stream(ingredients.spliterator(), false)
+                            .toList()
+                            .stream()
+                            .filter(x -> x.getType()
+                                          .equals(type))
+                            .collect(Collectors.toList());
+
+//        return ingredients.stream()
+//                          .filter(x -> x.getType()
+//                                        .equals(type))
+//                          .collect(Collectors.toList());
     }
 
 }
